[gd_scene load_steps=6 format=3 uid="uid://nukjbaohapei"]

[ext_resource type="Script" path="res://scenes/ui/end_screen.gd" id="1_y8or7"]
[ext_resource type="PackedScene" uid="uid://b5olb3s4jspme" path="res://scenes/ui/sound_button.tscn" id="2_sd2t5"]

[sub_resource type="Animation" id="Animation_dbfcr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_brvb6"]
resource_name = "default"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6v4ny"]
_data = {
"RESET": SubResource("Animation_dbfcr"),
"default": SubResource("Animation_brvb6")
}

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_y8or7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_6v4ny")
}

[node name="VictoryStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="DefeatStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.262745, 0.290196, 0.372549, 0.498039)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "VICTORY"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "You solved it"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="RestartButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_sd2t5")]
unique_name_in_owner = true
layout_mode = 2
text = "Restart"

[node name="NextLevelButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_sd2t5")]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Next Level"

[node name="QuitButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_sd2t5")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit to Menu"
